# stm32_starter_rs

./: Cargo.toml  openocd.gdb
.cargo/: config
src/: main.rs
