[package]
name = "stm32_starter_rs"
version = "0.1.0"
authors = ["Carlo Supina <cdsupina@gmail.com>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.4", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-semihosting = "0.5"
void = { version = "1", default_features = false }
